[gd_scene load_steps=4 format=3 uid="uid://b14m1j83lefh0"]

[ext_resource type="Script" uid="uid://bbfm4dxmsrrps" path="res://scripts/settings.gd" id="1_r6d6q"]
[ext_resource type="Theme" uid="uid://k2exx5sspodi" path="res://assets/MinimalUI/MinimalUI.tres" id="2_6wm04"]
[ext_resource type="Script" uid="uid://c22gmqbk3t3lr" path="res://scripts/audio_options.gd" id="2_f4mfi"]

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r6d6q")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="audio_options" type="Control" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_f4mfi")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/audio_options"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 255.0
offset_top = -46.0
offset_right = -159.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2

[node name="Master" type="Label" parent="ColorRect/audio_options/VBoxContainer"]
layout_mode = 2
text = "Master"

[node name="Masterbar" type="HSlider" parent="ColorRect/audio_options/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_6wm04")
max_value = 1.0
step = 0.05

[node name="Music" type="Label" parent="ColorRect/audio_options/VBoxContainer"]
layout_mode = 2
text = "Music"

[node name="Musicbar" type="HSlider" parent="ColorRect/audio_options/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_6wm04")
max_value = 1.0
step = 0.05

[node name="SFX" type="Label" parent="ColorRect/audio_options/VBoxContainer"]
layout_mode = 2
text = "Sound Effect"

[node name="SFXbar" type="HSlider" parent="ColorRect/audio_options/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_6wm04")
max_value = 1.0
step = 0.05

[node name="apply" type="Button" parent="ColorRect"]
custom_minimum_size = Vector2(100, 34)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -34.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_6wm04")
theme_override_font_sizes/font_size = 24
text = "Apply"

[node name="Back" type="Button" parent="ColorRect"]
custom_minimum_size = Vector2(100, 34)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -34.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_6wm04")
theme_override_font_sizes/font_size = 24
text = "Back"

[connection signal="mouse_exited" from="ColorRect/audio_options/VBoxContainer/Masterbar" to="ColorRect/audio_options" method="_on_masterbar_mouse_exited"]
[connection signal="mouse_exited" from="ColorRect/audio_options/VBoxContainer/Musicbar" to="ColorRect/audio_options" method="_on_musicbar_mouse_exited"]
[connection signal="mouse_exited" from="ColorRect/audio_options/VBoxContainer/SFXbar" to="ColorRect/audio_options" method="_on_sf_xbar_mouse_exited"]
[connection signal="pressed" from="ColorRect/apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="ColorRect/Back" to="." method="_on_back_pressed"]
